docs(research): fix Stage 1 sizing error, add pre-implementation validation pass
Why: §14.4's original sizing paragraph applied a speedup to the entire
     eval+accumulator bucket but labeled the result "Stage 1 alone" --
     Stage 1 only touches the accumulator; the 52-62% figure actually
     required Stage 2's eval-loop speedup too. Caught before #218/#219
     implementation started, per the explicit instruction to strengthen
     the plan with measurement/validation first.
What: Added §15: corrected Stage 1 model separating measured/derived/
      assumption/projection explicitly (Stage 1 alone ~41-46%, Stage
      1+2 ~48-60%, with the exact break-even speedup solved at ~1.71x);
      a measurement-first instrumentation plan for #219 distinguishing
      already-counted metrics from genuinely new ones, noting delta
      pruning gates on raw eval while futility/razoring gate on the
      correction-adjusted value (so both must be histogrammed
      separately); re-confirmed addFeature/subtractFeature as the
      correct Stage 1 target with no prerequisite refactoring needed;
      a 5-PR breakdown for #218 (scaffolding / Stage 1 / measure /
      conditional Stage 2 / re-measure); and a benchmark plan requiring
      median-of-5 runs at the gate, since the corrected projection's
      margin is thin enough for run-to-run variance to flip a single
      measurement. §14.4's original paragraph struck through with a
      pointer to the correction, not deleted, to keep the error
      traceable rather than silently rewritten.
Out of scope: Implementing Vector API, modifying evaluator code, or
      changing search heuristics -- this is planning/validation only.
Refs #218 Refs #219 Phase: 15 — nnue